[package]
name = "make-sys"
version = "0.1.1"
edition = "2021"
build = "build.rs"
repository = "https://github.com/oknotokcomputer/make-sys"
description = "A simple build script to generate bindings for make"
license = "GPL-3.0-only"

[dependencies]
libc = "0.2.155"

[build-dependencies]
bindgen = "0.69.4"
glob = "0.3.1"
walkdir = "2.5.0"
